# invoicing

./: .gitignore  Makefile  artikli.csv  company.db  csv.go  go.mod  go.sum  invoice.db  invoicing.db  main.go  output.csv  todos.db
csv/: csv.go
handlers/: company.go  invoice.go  invoices.go  items.go  suppliers.go
models/: models.go
rust/: README.md
rust/actix-web/: Cargo.toml  README.md
rust/actix-web/src/: handlers.rs  main.rs  models.rs  schema.rs
rust/axum/: Cargo.toml  README.md
rust/axum/src/: handlers.rs  main.rs  models.rs
rust/leptos/: Cargo.toml  README.md
rust/leptos/src/: app.rs  components.rs  main.rs  models.rs
rust/rocket/: Cargo.toml  README.md
rust/rocket/migrations/2023-01-01-000000_initial/: down.sql  up.sql
rust/rocket/src/: handlers.rs  main.rs  models.rs
static/css/: style.css
static/js/: invoice.js  table-search.js
templates/: company.html  index.html  invoice-create-form.html  invoice-edit-form.html  invoice-edit.html  invoice-form.html  invoice-full.html  invoice-line-item.html  invoice-summary.html  invoice.html  invoice_content.html  invoice_finalized.html  invoices.html  invoices_list.html  item-create-form.html  item-edit-form.html  item.html  items_list.html  kalkulacija.html  line_item_row.html  supplier-create-form.html  supplier-edit-form.html  supplier.html  suppliers.html  suppliers_list.html  todo.html  todos.html
templates/layouts/: base.html
templates/partials/: actions.html  nav.html
