[package]
name = "invoicing-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
askama = "0.12"
thiserror = "2.0"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
r2d2 = "0.8"
