[package]
name = "invoicing-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_actix = { version = "0.7", optional = true }
leptos_axum = { version = "0.7", optional = true }
leptos_meta = { version = "0.7", features = ["csr", "nightly"] }
leptos_router = { version = "0.7", features = ["csr", "nightly"] }
actix-web = { version = "4.9", optional = true }
axum = { version = "0.7", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_actix", "dep:actix-web", "dep:wasm-bindgen"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:console_error_panic_hook"]
axum = ["leptos_axum", "dep:axum", "leptos/ssr"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle
output-name = "invoicing_leptos"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative to the server root
site-pkg-dir = "pkg"
# Additional files your application may need at runtime (e.g., fonts, images)
assets-dir = "public"
# The port to use for the development server
site-addr = "127.0.0.1:3000"
# The command to run when building the site
bin-features = ["ssr"]
bin-target = "invoicing-leptos"
# The command to use when running end-to-end tests
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually "dev" or "prod"
env = "dev"
# The features to use when compiling the bin target
bin-features = ["ssr"]
# The features to use when compiling the lib target
lib-features = ["hydrate"]
